# shifted_gdn

./: .gitignore  README.md  pyproject.toml
checkpoints/: gdn_100M_the_stack.pt  gdn_ts_100M_the_stack.pt
data/: __init__.py  loader.py
eval_scripts/: graph_loss.py  key_quality.py  recall_bench.py
histories/: gdn_18M_the_stack.jsonl  shifted_gdn_18M_the_stack.jsonl  transformer_18M_the_stack.jsonl  transformer_ts_18M_the_stack.jsonl
models/: __init__.py  components.py  gated_deltanet.py  shifted_gdn.py  shifted_transformer.py  transformer.py
train/: configs.py  run.py
