[project]
name = "hebbian-language"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "mambapy>=1.2.0",
    "matplotlib>=3.10.8",
    "datasets>=2.14",
    "tokenizers>=0.15",
    "pyyaml>=6.0",
    "mlx>=0.30.6",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
